--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,10 @@
 <html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="Content-Security-Policy: default-src 'self'; script-src 'self' 'unsafe-inline'; connect-src 'self';"
+		/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
