--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<script src="https://kit.fontawesome.com/b8b0651880.js" crossorigin="anonymous"></script>
 <html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
